Update artifact dependencies for CLM issues
Change-Id: I5d77b8eb0e9449ff5725832c9d8914f11da3cd5a
Signed-off-by: dglFromAtt <dgl@research.att.com>
Issue-ID: DMAAP-987

--- a/pom.xml
+++ b/pom.xml
@@ -254,17 +254,17 @@
     <dependency>
       <groupId>io.swagger</groupId>
       <artifactId>swagger-core</artifactId>
-      <version>1.5.13</version>
+      <version>${swagger.version}</version>
     </dependency>
     <dependency>
       <groupId>io.swagger</groupId>
       <artifactId>swagger-jersey2-jaxrs</artifactId>
-      <version>1.5.13</version>
+      <version>${swagger.version}</version>
     </dependency>
     <dependency>
       <groupId>io.swagger</groupId>
       <artifactId>swagger-annotations</artifactId>
-      <version>1.5.13</version>
+      <version>${swagger.version}</version>
     </dependency>
     <dependency>
       <groupId>org.glassfish.jersey.containers</groupId>
@@ -359,8 +359,9 @@
   <properties>
     <jersey.version>2.16</jersey.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <jettyVersion>9.3.8.RC0</jettyVersion>
+    <jettyVersion>9.4.12.RC2</jettyVersion>
     <eelf.version>1.0.0</eelf.version>
+    <swagger.version>1.5.19</swagger.version>
     <artifact.version>1.0.25</artifact.version>
     <!--  SONAR  -->
     <jacoco.version>0.7.7.201606060606</jacoco.version>
