--- a/project.config
+++ b/project.config
@@ -4,3 +4,5 @@
 	description = It is a docker container that implements the dbcapi. It optionally can be deployed in a persistent mode which relies on PGaaS, in which case multiple containers can also be deployed for scale/availablity.
 [access "refs/*"]
 	read = group GitHub Replication
+[allowSuperproject "doc"]
+	matching = refs/heads/casablanca:refs/heads/casablanca
