--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,9 @@
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.onap.dmaap</groupId>
+  <groupId>org.onap.dmaap.buscontroller</groupId>
   <artifactId>parent</artifactId>
-  <version>1.1.0-SNAPSHOT</version>
+  <version>1.1.1-SNAPSHOT</version>
   <name>dmaap-buscontroller</name>
   <packaging>pom</packaging>
   
